# grm-rs

./: .dockerignore  .gitignore  .mcp.example.json  .mcp.json  Cargo.toml  Dockerfile  LICENSE  NOTICE.md  README.md  TRADEMARKS.md  docker-compose.cfssl-mtls.yml  docker-compose.yml  query_playground.grm
.github/workflows/: ci.yml  docker-publish.yml  python-wheels.yml
benches/: README.md  grm_vs_sqlite.rs  persistence.rs
docs/: backend-pivot-cypher-spike.md  cli-roadmap.md  durability-testing.md  future-roadmap.md  grpc-docker-service.md  grpc-quickstart.md  import-export.md  local-durability-target.md  mcp-batch-graph-patch-requirements.md  performance-benchmark-methodology.md  persistence-schema-memory-contract.md  python-neo4j-api-expansion.md  python-package-distribution.md  python-quickstart.md  query-language-design.md  query-persistence-optimization.md  service-boundary-design.md  testing-policy.md
docs/adr/: 0001-graph-data-and-schema-memory.md  0002-monorepo-with-split-ready-service-boundaries.md  0003-transparent-backend-acceleration.md  0004-structured-operational-memory-layer.md  0005-graph-workspace-and-durable-envelope.md  0006-mtls-certificate-mapping-authentication-provider.md  0007-server-derived-workspace-permissions.md  0008-bounded-authoritative-security-audit.md  README.md
docs/architecture/: aspirational-service-architecture.md
docs/perf/: performance-baseline-anecdotal-results.md  performance-benchmark-methodology.md  repeatable-cloud-benchmarks.md
docs/security/: cfssl-mtls-local-demo.md  security-design.md  security-memory-schema.md  threat-model.md
docs/skills/grm-architect/: SKILL.md
docs/skills/grm-architect/agents/: openai.yaml
docs/skills/grm-performance-engineer/: SKILL.md
docs/skills/grm-performance-engineer/agents/: openai.yaml
docs/skills/grm-product-manager/: SKILL.md
docs/skills/grm-product-manager/agents/: openai.yaml
docs/skills/grm-project-constraints/: SKILL.md
docs/skills/grm-project-constraints/agents/: openai.yaml
docs/skills/grm-project-memory/: SKILL.md
docs/skills/grm-project-memory/agents/: openai.yaml
docs/skills/grm-security-engineer/: SKILL.md
docs/skills/grm-security-engineer/agents/: openai.yaml
docs/soml/: data-type-primitives.md  graph-native-types.md  grm-soml-schema-direction.md
docs/soml/foundations/: README.md  grm-protocol-rfc-0001.md
docs/soml/memory/: graphai-feasibility.md
docs/tutorials/: README.md  cli-session.md  mcp-workflow.md  python-session.md  rust-service-workspace.md
examples/: cli_script.rs  grpc_demo.sh  grpc_python_client.py  persistence.rs  service_movies.grm  session_setup.grm
examples/cfssl-mtls/scripts/: mcp-http-smoke.sh  prepare-mcp-certs.sh  provision-cfssl.sh  render-security-config.sh  run-compose-smoke.sh  run-mcp-http-service.sh  smoke.sh
grm-cli/: Cargo.toml
grm-cli/src/: main.rs
grm-cli/tests/: cli_session_startup.rs
grm-mcp/: Cargo.toml  README.md
grm-mcp/src/: config.rs  help.rs  lib.rs  main.rs  schema.rs  server.rs  service.rs  tools.rs
grm-mcp/tests/: stdio.rs
grm-python/: Cargo.toml  README.md  pyproject.toml
grm-python/python/grm_rs/: __init__.py  _grm_rs.pyi  models.py  neo4j.py  session.py  typing.py
grm-python/src/: lib.rs
grm-rs-macros/: Cargo.toml
grm-rs-macros/src/: helpers.rs  lib.rs
grm-service-api/: Cargo.toml  README.md  build.rs
grm-service-api/benches/: local_grpc_workspace.rs
grm-service-api/examples/: local_workspace_client.rs  local_workspace_server.rs  migrate_neo4j_to_grpc.rs
grm-service-api/proto/grm/service/v1/: admin.proto  batch.proto  common.proto  edge.proto  node.proto  query.proto  schema.proto  service.proto  workspace.proto
grm-service-api/src/: lib.rs
grm-service-api/tests/: proto_contract.rs  security_workspace.rs  tls_workspace.rs
scripts/: benchmarks.sh  cloud_benchmark.py  index_inspection.sh  verify_python_distribution.py
scripts/tests/: test_cloud_benchmark.py
src/: error.rs  fsutil.rs  lib.rs  macros.rs
src/backend/: cypher.rs  graph.rs  graphpersistence.rs  graphstore.rs  inmemory.rs  mod.rs  neo4j.rs  persisted.rs  plan.rs  storednode.rs  storedrel.rs
src/backend/inmemory/: graphbackend.rs  graphtx.rs  inmemorytx.rs  mod.rs  returnplan.rs
src/client/: graphclient.rs  mod.rs
src/decode/: decoderow.rs  labels.rs  mod.rs  node.rs  rel.rs  shape.rs
src/dsl/: compare.rs  eval.rs  graph.rs  kernel.rs  mod.rs  nodepattern.rs  paging.rs  property.rs  query.rs  result.rs
src/model/: mod.rs  nodemodel.rs  props.rs  relmodel.rs
src/repo/: labels.rs  macros.rs  mod.rs  node_repo.rs  rel_repo.rs  repo.rs
src/runtime/: batch.rs  catalog.rs  durability.rs  mod.rs  neo4j.rs  ops.rs  parser.rs  session.rs  workspace.rs
tests/: backend.rs  backend_behavior.rs  backend_contracts.rs  basic.rs  client_graphclient.rs  command_parser.rs  cypher_translation.rs  dsl.rs  dsl_return.rs  golden_rules.rs  inmemory_tx_crud.rs  inmemory_tx_rollback.rs  kernel_graphquery.rs  metric_impl_test.rs  model_roundtrip.rs  neo4j_bolt_smoke.rs  persistence_test.rs  python_bindings_smoke.py  python_neo4j_movies_smoke.py  python_neo4j_smoke.py  python_service_smoke.py  python_typing_check.py  python_typing_negative.py  python_typing_positive.py  query_language_mockups.rs  repo.rs  repo_in_out.rs  repo_nodes.rs  repo_rels.rs  repo_return.rs  runtime_batch.rs  runtime_schema_template.rs  runtime_session.rs  runtime_workspace.rs
tests/common/: backend_behavior.rs  counting.rs  mod.rs  models.rs
tests/fixtures/: interchange_v1_basic.json
