[package]
name = "grm-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
grm-rs-macros = { path = "./grm-rs-macros" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
