[package]
name = "grm-rs"
version = "0.1.0"
edition = "2024"
description = "Typed in-memory graph modeling, querying, persistence, and interactive CLI sessions for Rust."
readme = "README.md"
repository = "https://github.com/poppaLol/grm-rs"
homepage = "https://github.com/poppaLol/grm-rs"
documentation = "https://docs.rs/grm-rs"
license-file = "LICENSE"
publish = false

[workspace]
members = ["grm-rs-macros", "grm-python", "grm-mcp", "grm-service-api"]

[dependencies]
grm-rs-macros = { version = "0.1.0", path = "./grm-rs-macros" }
async-trait = "0.1"
bincode = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
log = "0.4.29"
neo4rs = "0.8"

[dev-dependencies]
criterion = "0.5"
rusqlite = { version = "0.32", features = ["bundled"] }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[bench]]
name = "grm_vs_sqlite"
harness = false

[[bench]]
name = "persistence"
harness = false
