[package]
name = "grm-cli"
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"
publish = false
description = "Command-line interface for GRM runtime and service workflows."

[[bin]]
name = "grm"
path = "src/main.rs"

[dependencies]
grm-service-api = { path = "../grm-service-api" }
grm-rs = { path = ".." }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.12"
tempfile = "3"
