[package]
name = "grm-mcp"
version = "0.1.0"
edition = "2024"
description = "Model Context Protocol server for grm-rs runtime graph sessions."
license-file = "../LICENSE"
publish = false

[dependencies]
grm-rs = { path = ".." }
rmcp = { version = "1.5", features = ["server", "client", "macros", "schemars", "transport-io", "transport-child-process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }

[dev-dependencies]
tempfile = "3"
