[package]
name = "grm-mcp"
version = "0.1.1"
edition = "2024"
description = "Model Context Protocol server for grm-rs runtime graph sessions."
license = "Apache-2.0"
publish = false

[dependencies]
axum = "0.7"
grm-service-api = { path = "../grm-service-api" }
grm-rs = { path = ".." }
rmcp = { version = "1.5", features = ["server", "client", "macros", "schemars", "transport-io", "transport-child-process", "transport-streamable-http-server", "transport-streamable-http-client-reqwest"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "process", "rt-multi-thread", "sync"] }
tonic = "0.12"

[dev-dependencies]
tempfile = "3"
tokio-stream = { version = "0.1", features = ["net"] }
