[package]
name = "grm-rs-python"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
publish = false
description = "Python bindings for grm-rs runtime sessions."

[features]
default = []
extension-module = ["pyo3/extension-module"]
gil-refs = []

[lib]
name = "_grm_rs"
crate-type = ["cdylib"]

[dependencies]
grm-service-api = { path = "../grm-service-api" }
grm-rs = { path = ".." }
pyo3 = { version = "0.22", features = ["abi3-py39"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.12"
