[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "grm-rs"
version = "0.1.0a4"
description = "Pre-release Python bindings for grm-rs runtime graph sessions."
readme = "README.md"
requires-python = ">=3.9"

[tool.maturin]
python-source = "python"
module-name = "grm_rs._grm_rs"
