[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "grm-rs"
version = "0.1.0a7"
description = "Pre-release Python bindings for grm-rs runtime graph sessions."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"

[project.optional-dependencies]
typecheck = ["mypy>=1.10,<2"]

[tool.maturin]
python-source = "python"
module-name = "grm_rs._grm_rs"
features = ["extension-module"]
include = [{ path = "python/grm_rs/LICENSE", format = "wheel" }]

[tool.mypy]
python_version = "3.9"
strict = true
show_error_codes = true
