[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "grm-rs"
version = "0.1.1"
description = "Python bindings for grm-rs runtime graph sessions."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [{ name = "Laurie Ibbs" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://soml.io"
Repository = "https://github.com/poppaLol/grm-rs"
Issues = "https://github.com/poppaLol/grm-rs/issues"

[project.optional-dependencies]
typecheck = ["mypy>=1.10,<2"]

[tool.maturin]
python-source = "python"
module-name = "grm_rs._grm_rs"
features = ["extension-module"]
include = [{ path = "python/grm_rs/LICENSE", format = "wheel" }]

[tool.mypy]
python_version = "3.9"
strict = true
show_error_codes = true
