[package]
name = "grm-rs-macros"
version = "0.1.0"
edition = "2024"
description = "Procedural macros for grm-rs typed node and relationship models."
repository = "https://github.com/poppaLol/grm-rs"
homepage = "https://github.com/poppaLol/grm-rs"
documentation = "https://docs.rs/grm-rs-macros"
license-file = "../LICENSE"
publish = false

[lib]
proc-macro = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
