[package]
name = "grm-service-api"
version = "0.1.0"
edition = "2024"
description = "Split-ready protobuf service contract skeleton for GRM typed runtime operations."
repository = "https://github.com/poppaLol/grm-rs"
homepage = "https://github.com/poppaLol/grm-rs"
documentation = "https://docs.rs/grm-service-api"
license = "Apache-2.0"
publish = false

[dependencies]
grm-rs = { path = ".." }
prost = "0.13"
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
tonic = "0.12"

[build-dependencies]
prost-build = "0.13"
protoc-bin-vendored = "3"
tonic-build = "0.12"

[dev-dependencies]
criterion = "0.5"
prost-build = "0.13"
protoc-bin-vendored = "3"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["net"] }

[[bench]]
name = "local_grpc_workspace"
harness = false
